Sat Oct 19 19:55:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_locale_encindex): defer initialization of win32 code
	  page table until encoding db loaded.

Sat Oct 19 08:25:05 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix rb_objspace_t.
	  * make "struct heap" and move most of variables
	    in rb_objspace_t::heap.
	  * rename rb_objspace_t::heap::sorted to
	    rb_objspace_t::heap_sorted_pages
	    and make a macro heap_sorted_pages.
	  * rename rb_objspace_t::heap::range to
	    rb_objspace_t::heap_range and rename macros
	    lomem/himem to heap_lomem/heap_himem.

Sat Oct 19 07:14:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 42543b6.  Changes:

	  Fix `gem update` for gems with multiple platforms.

	* test/rubygems:  ditto.

Sat Oct 19 06:55:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 0a3814b.  Changes:

	  Fixed extension directory in Gem::Specification#require_paths.

	  Allow installation of gems when $HOME is nonexistent or unwritable.

	  Use proper API in InstallCommand.

	  Improve support for path option in gem dependency files.

	  Remove warnings.

	* test/rubygems:  ditto.

Fri Oct 18 15:23:34 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change terminology of heap.
	  Change "slot" to "page". "Slot" is a space of RVALUE.
	  1. "Heap" consists of a set of "heap_page"s (pages).
	  2. Each "heap_page" has "heap_page_body".
	  3. "heap_page_body" has RVALUE (a.k.a. "slot") spaces.
	  4. "sorted" is a sorted array of "heap_page"s, sorted
	     by address of heap_page_body (for "is_pointer_to_heap").

	  See https://bugs.ruby-lang.org/attachments/4008/data-heap_structure.png.

Fri Oct 18 09:40:43 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master cee6788.  Changes:

	  Fix test failure on vc10-x64 Server on rubyci.org due to attempting
	  to File.chmod where it is not supported.
